# EdgeBackend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test-sentences.md
alembic/: env.py
alembic/versions/: 20260502_init.py
backend/: Dockerfile  init_db.py  main.py  pre_download.py
backend/application/: __init__.py
backend/core/: base_service.py  config.py  context.py  database.py  deps.py  exceptions.py  logging.py  rate_limiter.py  security.py
backend/database_connector/: __init__.py  credential_model.py  engine_factory.py  models.py  repository.py  routers.py  schema_intelligence.py  schemas.py  service.py
backend/domain/: __init__.py
backend/ia/: factory.py  langchain_models.py  llm_client.py  orchestrator_factory.py
backend/integrations/: catalog.py  catalog_seed.py  catalog_service.py  credential_audit.py  credential_vault.py  credentials.py  integration_service.py  interfaces.py  models.py  oauth_refresh.py  routers.py  seed_catalog.py  stdio_runner.py
backend/presentation/: __init__.py  router.py
backend/services/: _helpers.py  admin_service.py  (+44 more)
docker/: backend-entrypoint.sh  entrypoint.sh
frontend/: .dockerignore  .env.production  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
nginx/: nginx.conf
scripts/: extract_prompts.py  migrate_add_agent_diagnosis.py  migrate_add_webhook_domain.py
src/: init_db.py  main.py
tests/: test_additional_fixes.py  test_reactive_pipeline_fixes.py  test_refactor_fixes.py  test_smoke_pipeline.py
(+574 files in other folders)
