[project]
name = "edgebackend"
version = "0.1.0"
description = "Edge AI Backend with Digital Optimus Architecture — vLLM + PostgreSQL + Qdrant + FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "qdrant-client",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "deepagents>=0.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "aiofiles>=24.1.0",
    "redis>=5.2.0",
    "sentence-transformers>=3.3.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "nest-asyncio>=1.6.0",
    "langgraph-checkpoint-redis>=0.4.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "pgvector>=0.3.0",
    "mcp>=1.0.0",
    "minio>=7.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = ["."]
